<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main_color"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/home"
            android:layout_centerInParent="true"
            android:textSize="16sp"
            />

        <ImageView
            android:id="@+id/iv_home_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_map"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingEnd="10dp"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_title"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/tv_road_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_centerInParent="true"
            android:text="@string/road_id"
            android:textColor="@color/bg_home_text"
            android:gravity="center"
            android:paddingEnd="25dp"
            android:paddingStart="25dp"
            android:drawablePadding="10dp"
            android:lines="1"
            android:ellipsize="end"
            app:drawableEndCompat="@drawable/ic_pull_down" />




        <TextView
            android:id="@+id/tv_road_section"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_centerInParent="true"
            android:text="@string/road_section"
            android:gravity="center"
            android:textColor="@color/bg_home_text"
            android:lines="1"
            android:ellipsize="end"
            android:paddingEnd="25dp"
            android:paddingStart="25dp"
            app:drawableEndCompat="@drawable/ic_pull_down"
            />


        <TextView
            android:id="@+id/tv_road_mileage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/road_mileage"
            android:layout_centerInParent="true"
            android:textColor="@color/bg_home_text"
            android:lines="1"
            android:gravity="center"
            android:ellipsize="end"
            android:paddingEnd="25dp"
            android:paddingStart="25dp"
            app:drawableEndCompat="@drawable/ic_pull_down"
            />



    </LinearLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_deicing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</LinearLayout>