<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.baidu.mapapi.map.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_map_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/blue_map"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/tv_road"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/tv_system_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tv_road"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"
            android:padding="10dp"
            />

        <TextView
            android:id="@+id/tv_device_monitor"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/tv_system_name"
            app:layout_constraintBottom_toBottomOf="@+id/tv_system_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/device_monitor_tip"
            android:gravity="center"
            android:textColor="@color/white"
            android:paddingEnd="10dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_map_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cl_map_bottom"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:background="#66000000"
        >


        <ImageView
            android:id="@+id/iv_map_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_map_online"
            />

        <TextView
            android:id="@+id/tv_map_online"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/iv_map_online"
            app:layout_constraintBottom_toBottomOf="@+id/iv_map_online"
            app:layout_constraintStart_toEndOf="@+id/iv_map_online"
            android:gravity="center"
            android:text="@string/online"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:textSize="10sp"
            />

        <ImageView
            android:id="@+id/iv_map_offline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/iv_map_online"
            app:layout_constraintStart_toStartOf="@id/iv_map_online"
            android:src="@drawable/ic_map_offline"
            android:layout_marginTop="10dp"
            />



        <TextView
            android:id="@+id/tv_map_offline"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/iv_map_offline"
            app:layout_constraintBottom_toBottomOf="@+id/iv_map_offline"
            app:layout_constraintStart_toStartOf="@+id/tv_map_online"
            android:gravity="center"
            android:text="@string/offline"
            android:textColor="@color/white"
            android:textSize="10sp"
            />


        <View
            android:id="@+id/view_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_map_offline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_alert_yellow"
            android:layout_marginTop="10dp"
            android:background="@color/freeze_line"
            />

        <!--<ImageView
            android:id="@+id/iv_freeze_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_freeze"
            app:layout_constraintTop_toBottomOf="@+id/view_line"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/freeze_blue"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/tv_alert_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_blue"
            app:layout_constraintStart_toEndOf="@+id/iv_freeze_blue"
            app:layout_constraintTop_toTopOf="@+id/iv_freeze_blue"
            app:layout_constraintBottom_toBottomOf="@+id/iv_freeze_blue"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:layout_marginStart="10dp"
            />-->


        <ImageView
            android:id="@+id/iv_freeze_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_freeze"
            app:layout_constraintTop_toBottomOf="@+id/view_line"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/freeze_yellow"
            />

        <TextView
            android:id="@+id/tv_alert_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_yellow"
            app:layout_constraintStart_toEndOf="@+id/iv_freeze_yellow"
            app:layout_constraintTop_toTopOf="@+id/iv_freeze_yellow"
            app:layout_constraintBottom_toBottomOf="@+id/iv_freeze_yellow"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:layout_marginStart="10dp"
            />


        <ImageView
            android:id="@+id/iv_freeze_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_freeze"
            app:layout_constraintTop_toBottomOf="@+id/iv_freeze_yellow"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/freeze_orange"
            />

        <TextView
            android:id="@+id/tv_alert_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_orange"
            app:layout_constraintStart_toEndOf="@+id/iv_freeze_orange"
            app:layout_constraintTop_toTopOf="@+id/iv_freeze_orange"
            app:layout_constraintBottom_toBottomOf="@+id/iv_freeze_orange"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:layout_marginStart="10dp"
            />



        <ImageView
            android:id="@+id/iv_freeze_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_freeze"
            app:layout_constraintTop_toBottomOf="@+id/iv_freeze_orange"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/freeze_red"
            />

        <TextView
            android:id="@+id/tv_alert_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_red"
            app:layout_constraintStart_toEndOf="@+id/iv_freeze_red"
            app:layout_constraintTop_toTopOf="@+id/iv_freeze_red"
            app:layout_constraintBottom_toBottomOf="@+id/iv_freeze_red"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:layout_marginStart="10dp"
            />


        <ImageView
            android:id="@+id/iv_freeze_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_freeze"
            app:layout_constraintTop_toBottomOf="@+id/iv_freeze_red"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/freeze_black"
            />

        <TextView
            android:id="@+id/tv_alert_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_black"
            app:layout_constraintStart_toEndOf="@+id/iv_freeze_black"
            app:layout_constraintTop_toTopOf="@+id/iv_freeze_black"
            app:layout_constraintBottom_toBottomOf="@+id/iv_freeze_black"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:layout_marginStart="10dp"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>