<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    >

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/main_color"
        >

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            >

            <TextView
                android:id="@+id/tv_bind_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_change_psd"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:drawablePadding="10dp"
                app:drawableStartCompat="@drawable/ic_back" />

        </LinearLayout>




        <TextView
            android:id="@+id/tv_modify_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/save"
            android:gravity="center"
            android:textColor="@color/text_write"
            android:textSize="16sp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            />


    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/rl_title"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/tv_psd_old"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/ev_psd_old_value"
            app:layout_constraintBottom_toBottomOf="@+id/ev_psd_old_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_psd_sure_new"
            android:text="@string/psd_old"
            android:paddingStart="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            />

        <EditText
            android:id="@+id/ev_psd_old_value"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_psd_old"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:hint="请输入旧密码"
            android:background="@null"
            android:inputType="textPassword"
            />


        <View
            android:id="@+id/view_psd_old_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_psd_old"
            />

        <TextView
            android:id="@+id/tv_psd_new"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/ev_psd_new_value"
            app:layout_constraintBottom_toBottomOf="@+id/ev_psd_new_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_psd_sure_new"
            android:text="@string/psd_new"
            android:paddingStart="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            />

        <EditText
            android:id="@+id/ev_psd_new_value"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/view_psd_old_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_psd_new"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:hint="请输入新密码"
            android:background="@null"
            android:inputType="textPassword"
            />


        <View
            android:id="@+id/view_psd_new_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_psd_new"
            />

        <TextView
            android:id="@+id/tv_psd_sure_new"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/ev_psd_sure_new_value"
            app:layout_constraintBottom_toBottomOf="@+id/ev_psd_sure_new_value"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/psd_sure_new"
            android:paddingStart="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/ev_psd_sure_new_value"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/view_psd_new_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_psd_sure_new"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:hint="请再次输入新密码"
            android:background="@null"
            android:inputType="textPassword"
            />


        <View
            android:id="@+id/view_sure_new_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_psd_sure_new"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>