<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="80dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_logo_login"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="智能抗冰系统"
        android:textColor="@color/main_color"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        />



        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_login_account"
            android:drawablePadding="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:padding="10dp"
            android:layout_marginTop="64dp"
            android:hint="@string/input_account"
            />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_login_psd"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/input_password"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            >

            <EditText
                android:id="@+id/et_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_login_psd"
                android:hint="@string/input_answer"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_verification_code"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/et_verification_code"
                android:layout_alignBottom="@+id/et_verification_code"
                android:scaleType="fitXY"
                />


        </RelativeLayout>


        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:text="登录"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@drawable/bg_login_btn"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_register_portrol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        />

</RelativeLayout>