<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_gray"
    >

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/main_color"
        >

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/device_monitor"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            />


    </RelativeLayout>




    <com.flyco.tablayout.SlidingTabLayout
        android:id="@+id/stl_monitor"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/rl_title"
        app:tl_indicator_color="@color/main_color"
        app:tl_indicator_height="1dp"
        app:tl_textSelectColor="@color/main_color"
        app:tl_textUnselectColor="#707070"
        app:tl_textsize="16sp"
        app:tl_indicator_width_equal_title="true"
        app:tl_tab_space_equal="true"
        />

    <TextView
        android:id="@+id/tv_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/stl_monitor"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:textColor="@color/text_black"
        android:layout_marginStart="16dp"
        />

    <TextView
        android:id="@+id/tv_device_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_device_name"
        app:layout_constraintStart_toStartOf="@+id/tv_device_name"
        android:layout_marginTop="5dp"
        android:textColor="@color/text_gray"
        android:text="@string/device_id_tip"
        />

    <TextView
        android:id="@+id/tv_device_id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tv_device_id"
        app:layout_constraintTop_toTopOf="@+id/tv_device_id"
        app:layout_constraintBottom_toBottomOf="@+id/tv_device_id"
        android:textColor="@color/text_black"
        />

    <TextView
        android:id="@+id/tv_highways"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_device_id"
        app:layout_constraintStart_toStartOf="@+id/tv_device_id"
        android:layout_marginTop="5dp"
        android:textColor="@color/text_gray"
        android:text="@string/highway_tip"
        />

    <TextView
        android:id="@+id/tv_highways_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_device_id_value"
        app:layout_constraintTop_toTopOf="@+id/tv_highways"
        app:layout_constraintBottom_toBottomOf="@+id/tv_highways"
        android:textColor="@color/text_black"
        />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_monitor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@+id/tv_highways"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>